fixed scrollbar movement

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,6 +13,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: #981e32;
+  overflow-y: hidden;
+
 }
 .grey_container{
     position: relative;
@@ -495,4 +497,14 @@ body {
   .grey_container {
     height: 50vh;
   }
+
+
+
+
+
+
+
+
+
+
 }
